--- a/fetch.css
+++ b/fetch.css
@@ -1,3 +1,13 @@
 body {
     background-color: gainsboro;
 }
+
+.user {
+    margin: 1em;
+    padding: 1em;
+    background-color: tomato;
+    color: white;
+    border-radius: 1em;
+    letter-spacing: 0.015em;
+    line-height: 1em;
+}
